<resources>
    <string name="app_name">SimpleTodo</string>
    <string name="hint">Add a new item</string>
    <string name="add">Add</string>
    <string name="status">Status</string>
    <string name="priority_level">Priority level</string>
    <string name="task_note">Task Note</string>
    <string name="date">Date</string>
    <string name="task_name">Task name</string>
    <string-array name="priority_array">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="status_array">
        <item>DONE</item>
        <item>TO-DO</item>
    </string-array>

</resources>
