<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorial.phant.simpletodo.EditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEdit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:titleTextColor="#CDDC39"
        tools:title="Hello" />

    <!--Task name-->
    <TextView
        android:layout_below="@+id/toolbarEdit"
        android:id="@+id/tvTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/task_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:layout_below="@+id/toolbarEdit"
        android:id="@+id/etTaskNameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTaskName"
        android:layout_alignBottom="@+id/tvTaskName"
        android:layout_toEndOf="@+id/tvTaskName"
        android:imeOptions="actionNext"
        android:maxLines="1" />

    <View
        android:id="@+id/lineMe"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvTaskName"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="#009688" />

    <!--Due Date-->
    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineMe"
        android:layout_margin="15dp"
        android:text="@string/date"
        android:textSize="24sp"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/datePickerEdit"
        style="@style/date_picker_theme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineMe"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tvDueDate"
        android:fitsSystemWindows="true" />

    <View
        android:id="@+id/lineMe2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/datePickerEdit"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="#009688" />

    <!--Task Note-->
    <TextView
        android:id="@+id/tvTaskNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineMe2"
        android:layout_margin="15dp"
        android:text="@string/task_note"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTaskNoteEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineMe2"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/tvTaskName"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <View
        android:id="@+id/lineMe3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvTaskNote"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="#009688" />

    <!--Priority level-->
    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineMe3"
        android:layout_margin="15dp"
        android:text="@string/priority_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerPriorityEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPriority"
        android:layout_alignTop="@+id/tvPriority"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/tvPriority" />

    <View
        android:id="@+id/lineMe4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvPriority"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="#009688" />

    <!--Status-->
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineMe4"
        android:layout_margin="15dp"
        android:text="@string/status"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerStatusEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvStatus"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvStatus"
        android:layout_toEndOf="@+id/tvPriority" />

</RelativeLayout>
